--- a/style.css
+++ b/style.css
@@ -1,5 +1,17 @@
 :root {
-  font-size: 1.5rem;
+  font-size: 150%;
+}
+
+@media (min-width: 768px) {
+  :root {
+    font-size: 80%;
+  }
+}
+
+@media (min-width: 992px) {
+  :root {
+    font-size: 120%;
+  }
 }
 
 .x-small {
